mime 타입을 지원하는 로직을 변경 및 favicon, 폰트 등 다른 타입도 지원